Fri Aug 3 02:44:54 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data.h
	  sample_data.cpp (get_current_pos): Changed return type
	from size_t to ptrdiff_t.
	* tracker_voice.h: Changed type of Tracker_Voice::current_index
	from size_t to ptrdiff_t.
Fri Aug 3 01:54:44 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_viewer.cpp (paintEvent): Fixed fencepost bug
	that was causing the GNU vector class's array bounds
	checking to trip.
	* mdi_main_window.cpp: Updated version and website strings.
Wed Aug 1 02:02:12 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data_fixedpoint.h (fixedpoint_loop): Copied in
	the version of fixedpoint_loop() from Revision 57.
	* sample_data.h: Changed type of current_pos from size_t
	to ptrdiff_t.
	* sample_data_fixedpoint.h (fixedpoint_loop): Restored the
	"sustaining" argument.
	* tracker_voice.cpp (add_to_mix_buffer): fixedpoint_loop() is
	called with "false" as the argument, until the code to load
	sustain loops from files is implemented.
Mon Jul 30 12:32:46 EDT 2007 J Phelps <godless@users.sf.net>
	* tracker_voice.cpp (add_to_mix_buffer): Added 1 to
	calculation of the number of "virtual samples", as in
	cheesetracker-0.9.9. This was thought to be an off-by-one
	bug, but it is now known that this is required for looping
	to work properly.
Mon Jul 30 03:37:11 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data.cpp (Copy constructor): Fixed a bug where
	copy-constructed Sample_Data structures don't allocate
	a new mutex, and therefore crash upon deletion.
Wed Jun 27 10:10:49 EDT 2007 J Phelps <godless@users.sf.net>
	* loader_raw.cpp
	* loader_wav.cpp
	* loader_it_samples.cpp
	* loader_s3m.cpp
	* saver_raw.cpp
	* saver_it.cpp
	* saver_wav.cpp
	* interface.cpp
	* pattern_edit__keys.cpp
	* player_data_events.cpp
	* pattern.cpp
	* player_data_control.cpp
	* tracker_voice.cpp
	* simple_edit_effects.cpp
	* mutex_queue.cpp
	* mutex_lock.cpp
	* mutex_lock.h
	* multireader_lock.cpp
	* sample_data.h
	* sample_data.cpp