@@ -1,3 +1,6 @@
+Fri Aug 3 04:54:44 EDT 2007 J Phelps <godless@users.sf.net>
+	* dds_helpers.cpp (get_sample_data,set_sample_data):
+	Added support for multi-channel samples, at last!!!!
 Fri Aug 3 02:44:54 EDT 2007 J Phelps <godless@users.sf.net>
 	* sample_data.h
 	  sample_data.cpp (get_current_pos): Changed return type
